﻿shmuel 16.07.2014 18:15:38 +0200 - build 4004

1. Дополнение доступа плагина LuaMacro к буферу экрана.

zg 16.07.2014 01:13:27 +0200 - build 4003

1. с форума: некоректный заголовок консоли при вызове macrobrowser'а через Plugin.Menu.

zg 15.07.2014 21:39:44 +0200 - build 4002

1. с форума: падние в ACTL_GETWINDOWINFO.

shmuel 14.07.2014 20:56:15 +0200 - build 4001

1. Plugin.Menu(), Plugin.Config() и Plugin.Command() возвращают false при неудаче.

drkns 14.07.2014 14:39:33 +0200 - build 4000

1. 0002709: Запрос привилегий администратора может быть невидим если вызван макросом

zg 13.07.2014 14:50:01 +0200 - build 3999

1. уточнение 3992: диалоги показывались только один раз после создания.

drkns 13.07.2014 14:24:22 +0200 - build 3998

1. Опция Interface.FormatNumberSeparators теперь имеет строковый тип.

2. В отладочном билде включен SmallerTypeCheck.

3. Рефакторинг.

drkns 12.07.2014 20:33:45 +0200 - build 3997

1. Уточнение 3996 и ещё пара мелочей.

drkns 12.07.2014 14:18:49 +0200 - build 3996

1. Добавлена опция /set:<parameter>=<value>, позволяющая переопределять основные настройки (см. far:config).

drkns 12.07.2014 09:45:28 +0200

1. Во внешний DialogBuilder добавлена поддержка списков.

zg 11.07.2014 22:11:38 +0200 - build 3995

1. уточнение 3993: при переходе по +/- в просмотре не вызывался EE_READ.

zg 11.07.2014 19:21:21 +0200 - build 3994

1. уточнение 3981 для горизонтального меню.

zg 10.07.2014 22:54:11 +0200 - build 3993

1. VE_READ вызывается, когда окно просмотра полностью сконструировано.

zg 10.07.2014 20:54:25 +0200 - build 3992

1. уточнение 3981.

zg 10.07.2014 15:49:53 +0200 - build 3991

1. уточнение 3985: в EE_CLOSE не работали ECTL_GETINFO и ECTL_GETBOOKMARKS.

zg 10.07.2014 13:54:25 +0200 - build 3990

1. при переоткрытии файла в редакторе мог удалятся не тот фрейм. вплоть до панелей.

drkns 10.07.2014 09:14:35 +0200 - build 3989

1. Древний баг, но начал проявляться только при недавних падениях при выходе: