@@ -1,4 +1,11 @@
-﻿shmuel 16.07.2014 18:15:38 +0200 - build 4004
+﻿zg 17.07.2014 02:44:33 +0200 - build 4005
+
+1. 0002734: Сломали диалоги.
+   вылез древний баг: при удалении неактивного окна, активное окно исчезает.
+
+2. редактор и просмотр при определённых условиях могли портить память.
+
+shmuel 16.07.2014 18:15:38 +0200 - build 4004
 
 1. Дополнение доступа плагина LuaMacro к буферу экрана.
 
